recursion.cons.lessons.recursion.cons.Increasing.scala.error
increasing:2: error: not found: type int
	def fonctionInterne(l:List[int], mem:Int): Boolean ={
                                   ^increasing:6: error: value =< is not a member of Int
		else if (mem=<l.head) {
                            ^